--- a/src/Msp/UserBundle/Resources/views/Registration/register_eleve_etape1.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register_eleve_etape1.html.twig
@@ -43,7 +43,7 @@
         </div>                      
         <div class="craue-button">            
             <div class="align-password">
-                <button type="submit" class="craue_poursuivre">                                  
+                <button type="submit">
                     <img src="{{ asset('/img/poursuivre.png') }}" alt=""/>
                 </button>
             </div>                                   
