--- a/src/Msp/UserBundle/Resources/views/Registration/register_eleve_etape4.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register_eleve_etape4.html.twig
@@ -1,4 +1,5 @@
 <div id="step-4" class="hide">    
+    <h1 class="avenirNextBold">MAINTENANT DITES NOUS QUELS SONT VOS OBJECTIFS ...</h1>
     <div class="form-wrap-inner row-fluid form-with-padding">                                 
         <div class="wrap-left">                      
             <div class="row-fluid">            
