--- a/src/Msp/UserBundle/Resources/views/Registration/register_eleve_etape5.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register_eleve_etape5.html.twig
@@ -1,4 +1,5 @@
 <div id="step-5" class="hide">    
+    <h1 class="avenirNextBold">ENFIN CHOISSISSEZ VOTRE FORMULES.</h1>
     <div class="form-wrap-inner row-fluid">                     
         <div class="row-fluid">            
             {# Affichage du champ cours #}
@@ -77,7 +78,7 @@
         <div class="clearfix"></div>
     </div>
     <div class="text-center">
-        <button type="submit" class="craue_poursuivre">                                  
+        <button type="submit" class="craue_end">                                  
             <img src="{{ asset('/img/terminer-inscription.png') }}" alt=""/>                                
         </button>
     </div>
