end admin, eleve, professeur form register

--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -612,7 +612,7 @@
     </div>      
 {% endblock %}{# empty Twig template #}
 
-{% block javascripts2 %}
+{% block javascripts %}
     {{ parent() }}   
     <script>
         jQuery(document).ready(function() { 
