--- a/src/Msp/FrontendBundle/Resources/views/Question/new.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/new.html.twig
@@ -34,7 +34,7 @@
     
 {% endblock %}
 
-{% block javascripts2 %}
+{% block javascripts %}
     {{ parent() }}   
     <script type="text/javascript" src="{{ asset('javascript/question.js') }}"></script>
 {% endblock %}
