--- a/src/Msp/FrontendBundle/Resources/views/User/admin.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/admin.html.twig
@@ -114,7 +114,7 @@
     </div>
 {% endblock %}{# empty Twig template #}
 
-    {% block javascripts2 %}
+    {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('javascript/sorter.js') }}"></script>
     <script type="text/javascript" src="{{ asset('javascript/start_sorter.js') }}"></script>
