--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -139,15 +139,12 @@
                 
             </footer>           
                 
-        </div>
-        
-        {% block javascripts1 %}
-        {# inclusion de la librairie de jquery #}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>        
-        {% endblock %}
-        
-        {% block javascripts2 %}
+        </div>        
+               
+        {% block javascripts %}
+            {# inclusion de la librairie de jquery #}
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+            <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
             {% javascripts output='js/main.js' filter='' 'js/*' %}
                 <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
