--- a/src/Msp/FrontendBundle/Resources/views/Eleve/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Eleve/index.html.twig
@@ -125,7 +125,7 @@
     
 {% endblock %}
 
-{% block javascripts2 %}
+{% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('javascript/sorter.js') }}"></script>
     <script type="text/javascript" src="{{ asset('javascript/start_sorter.js') }}"></script>
