--- a/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
@@ -135,7 +135,7 @@
     </div>
 {% endblock %}
 
-{% block javascripts2 %}
+{% block javascripts %}
     {{ parent() }}   
     <script>
         jQuery(document).ready(function() { 
