--- a/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
@@ -110,7 +110,7 @@
     </ul>
 {% endblock %}
     
-{% block javascripts2 %}
+{% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('javascript/sorter.js') }}"></script>
     <script type="text/javascript" src="{{ asset('javascript/start_sorter.js') }}"></script>
