--- a/src/Msp/FrontendBundle/Resources/views/Question/edit.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/edit.html.twig
@@ -42,7 +42,7 @@
 </ul>
 {% endblock %}
     
-{% block javascripts2 %}
+{% block javascripts %}
     {{ parent() }}   
     <script type="text/javascript" src="{{ asset('javascript/question.js') }}"></script>
 {% endblock %}
