--- a/src/Msp/UserBundle/Resources/views/Form/fields.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Form/fields.html.twig
@@ -1,3 +1,149 @@
+{% block msp_user_registration_widget %}
+{% spaceless %}
+<div class="row-fluid">
+    <div class="span4">
+        {# Affichage du champ username #}
+        <div class="control-group">
+            {{ form_label(form.username, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.username.vars.errors|length %}
+                {{ form_widget(form.username, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.username, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.username) }}
+        </div>
+        {% for password in form.plainPassword%}
+        {# Affichage du champ username #}
+        <div class="control-group">
+            {{ form_label(password, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if password.vars.errors|length %}
+                {{ form_widget(password, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(password, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(password) }}
+        </div>
+        {% endfor %}
+        {# Affichage du champ nom #}
+        <div class="control-group">
+            {{ form_label(form.nom, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.nom.vars.errors|length %}
+                {{ form_widget(form.nom, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.nom, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.nom) }}
+        </div>
+        {# Affichage du champ prenom #}
+        <div class="control-group">
+            {{ form_label(form.prenom, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.prenom.vars.errors|length %}
+                {{ form_widget(form.prenom, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.prenom, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.prenom) }}
+        </div>
+        {# Affichage du champ email #}        
+        <div class="control-group">
+            {{ form_label(form.email, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.email.vars.errors|length %}
+                {{ form_widget(form.email, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.email, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.email) }}
+        </div>
+        {# Affichage du champ numeroPortable #}
+        <div class="control-group">
+            {{ form_label(form.roles, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.roles.vars.errors|length %}
+                {{ form_widget(form.roles, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.roles, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}            
+            </div>
+            {{ form_errors(form.roles) }}
+        </div>
+    </div>            
+    <div class="span7">        
+        {# Affichage du champ numeroPortable #}
+        <div class="control-group">
+            {{ form_label(form.numeroPortable, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.numeroPortable.vars.errors|length %}
+                {{ form_widget(form.numeroPortable, {'attr' : {'class' : 'alert'}}) }}
+            {% else %}
+                {{ form_widget(form.numeroPortable, {'attr' : {'class' : ''}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.numeroPortable) }}
+        </div>
+        {# Affichage du champ adresse #}
+        <div class="control-group">
+            {{ form_label(form.adresse, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.adresse.vars.errors|length %}
+                {{ form_widget(form.adresse, {'attr' : {'class' : ' alert'}}) }}
+            {% else %}
+                {{ form_widget(form.adresse, {'attr' : {'class' : ''}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.adresse) }}
+        </div>        
+        {# Affichage du champ numeroPortable #}
+        <div class="control-group">
+            {{ form_label(form.departement, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.departement.vars.errors|length %}
+                {{ form_widget(form.departement, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.departement, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.departement) }}
+        </div>        
+        <div class="control-group">
+           {{ form_label(form.ville, null, {'label_attr': {'class' : 'control-label' }}) }}
+           <div class="controls">
+           {% if form.ville.vars.errors|length %}
+               {{ form_widget(form.ville, {'attr' : {'class' : 'alert'}}) }}
+           {% else %}
+               {{ form_widget(form.ville, {'attr' : {'class' : ''}}) }}
+           {% endif %}
+           </div>
+           {{ form_errors(form.ville) }}
+       </div> 
+         {# Affichage du champ numeroPortable #}
+        <div class="control-group">
+            {{ form_label(form.dateDeNaissance, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.dateDeNaissance.vars.errors|length %}
+                {{ form_widget(form.dateDeNaissance, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.dateDeNaissance, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            <span class="help-form">Format jj/mm/aaaa</span>
+            </div>
+            {{ form_errors(form.dateDeNaissance) }}
+        </div>        
+    </div>    
+    {{ form_rest(form) }}    
+</div>
+{% endspaceless %}
+{% endblock %}
+
 {% block register_professeur_widget %}
 {% spaceless %}
 <div class="row-fluid">
@@ -116,9 +262,9 @@
                {{ form_label(form.ville, null, {'label_attr': {'class' : 'control-label' }}) }}
                <div class="controls">
                {% if form.ville.vars.errors|length %}
-                   {{ form_widget(form.ville, {'attr' : {'class' : 'input-medium alert'}}) }}
+                   {{ form_widget(form.ville, {'attr' : {'class' : 'alert'}}) }}
                {% else %}
-                   {{ form_widget(form.ville, {'attr' : {'class' : 'input-medium'}}) }}
+                   {{ form_widget(form.ville, {'attr' : {'class' : ''}}) }}
                {% endif %}
                </div>
                {{ form_errors(form.ville) }}
