--- a/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspUserBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}INSCRIPTION PROFESSEUR | {{ parent() }}{% endblock %}
+{% block title %}INSCRIPTION ADMIN | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,15 +10,15 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}INSCRIPTION PROFESSEUR | {{ parent() }}{% endblock %}
+{% block entetetitle %}INSCRIPTION ADMIN | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 
 {% block fos_user_content %}
 
 <header>        
-    <h1>INSCRIPTION PROFESSEUR</h1>
-    <p class="pull-right"><a class="btn" href="{{ path('msp_eleve_inscription')}}">INSCRIPTION ELEVE</a></p>    
+    <h1>INSCRIPTION ADMIN</h1>
+    <p class="pull-right"></p>    
 </header>
 
 <div>
@@ -30,6 +30,12 @@
 {# L'utilisateur e le rôle admin ? #}
 {% if is_granted('ROLE_ADMIN') %}
 <ul class="unstyled nav-pills nav-stacked">
+    <li>
+        <a class="btn" href="{{ path('msp_eleve_inscription')}}">INSCRIPTION ELEVE</a>
+    </li>
+    <li>
+        <a class="btn" href="{{ path('msp_professeur_inscription')}}">INSCRIPTION PROFESSEUR</a>
+    </li>
     <li>
         <a class="btn" href="{{ path('eleve') }}">
             <i class="icon-chevron-left"></i> Retour à la liste des élèves
