--- a/src/Msp/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,6 +1,6 @@
-<form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
+<form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="form-horizontal well">
     {{ form_widget(form) }}
-    <div>
+    <div class="form-actions">
         <input class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
     </div>
 </form>
