mise à jour contenu

--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -18,11 +18,11 @@
         
         <header class="header avenirNextItalic">
            Le collège est une étape importante de l’éducation, les matières sont diverses et variées. Un 
-           accompagnement de l’élève  est indispensable pour lui permettre de s’adapter à ce nouveau rythme 
-           de travail. L’intérêt des mathématiques acquis au primaire, doit continuer à être stimuler via de 
-           nouveau domaines tel que la géométrie, les grandeurs et mesures. En effet, l’approfondissement des 
-           calculs et la gestion des données, offrent de nouvelles perspectives dans l’approche de problèmes 
-           concrets.<br />
+           accompagnement de l’élève  est indispensable pour lui permettre de s’adapter à ce nouveau 
+           rythme de travail. L’intérêt des mathématiques acquis au primaire, doit continuer à être stimuler 
+           via de nouveau domaines tel que la géométrie, les grandeurs et mesures. En effet, 
+           l’approfondissement des calculs et la gestion des données, offrent de nouvelles perspectives dans 
+           l’approche de problèmes concrets.<br />
            <i>A la fin du collège, l’élève devrait être apte à résoudre des problèmes un peu plus sophistiqués 
                aussi bien graphiquement qu’à l’aide de calculs numériques.</i>  
         </header>
@@ -608,7 +608,9 @@
             </article>
         
         </div>    
-       
+        <figure class="text-center">
+            <img src="{{ asset('/img/college.jpg') }}" alt="" />
+        </figure>
     </div>      
 {% endblock %}{# empty Twig template #}
 
