--- a/src/Msp/FrontendBundle/Resources/views/Page/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/index.html.twig
@@ -62,10 +62,10 @@
         <div id="slider">
             
             <div class="slider-handler">
-                <img title="1" src="{{ asset('/img/slider-1_03.jpg') }}" alt="" /> 
-                <img title="2" src="{{ asset('/img/slider-1_03.jpg') }}" alt="" /> 
-                <img title="3" src="{{ asset('/img/slider-1_03.jpg') }}" alt="" /> 
-                <img title="4" src="{{ asset('/img/slider-1_03.jpg') }}" alt="" /> 
+                <img title="3" src="{{ asset('/img/primaire-2.jpg') }}" alt="" /> 
+                <img title="3" src="{{ asset('/img/domicile-1.jpg') }}" alt="" /> 
+                <img title="3" src="{{ asset('/img/face-a-face-1.jpg') }}" alt="" /> 
+                <img title="4" src="{{ asset('/img/classe-virtuelle-1.jpg') }}" alt="" /> 
             </div>
             
         </div>
