--- a/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
@@ -14,7 +14,7 @@
 
 {# Le contenu de la page #}
 {% block content %}
-     <div class="niveau">
+     <article class="niveau">
         
         <p class="header avenirNextItalic">
             A la faculté, l’étudiant a besoin d’accompagnement pour s’adapter à ce nouvel environnement où 
@@ -28,5 +28,9 @@
             <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
         </footer>
         
-    </div>       
+        <figure class="text-center">
+            <img src="{{ asset('/img/universite.jpg') }}" alt="" />
+        </figure>
+        
+    </article>       
 {% endblock %}
