--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -143,10 +143,12 @@
                
         {% block javascripts %}
             {# inclusion de la librairie de jquery #}
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-            <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-            {% javascripts output='js/main.js' filter='' 'js/*' %}
-                <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% javascripts output='js/main.js' 
+            '@MspFrontendBundle/Resources/public/js/jquery.min.js'
+            '@MspFrontendBundle/Resources/public/js/jquery-ui.min.js'
+            '@MspFrontendBundle/Resources/public/js/a.javascript.js'
+            %}
+            <script type="text/javascript" src="http://{{ app.request.host }}{{ asset_url }}"></script>
             {% endjavascripts %}
         {% endblock %}
     </body>
