--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,13 +10,17 @@
         <meta name="robots" content="{% block robots %}all{% endblock %}"/>
         
         {% block stylesheets %}            
-            {% stylesheets output='css/style.css' filter='cssrewrite' 'css/*' %}
+            {% stylesheets output='css/style.css' filter='cssrewrite' 
+            '@MspFrontendBundle/Resources/public/css/bootstrap.css'
+            '@MspFrontendBundle/Resources/public/css/main.css'
+            '@MspFrontendBundle/Resources/public/css/font.css'
+            %}
                 <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
             {% endstylesheets %}
         {% endblock %}
         
         {% block jsForIE %}
-            {# Pour la compatibilité IE6-8 #}
+            {# Pour la compatibilitÃ© IE6-8 #}
             <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
             <![endif]-->
@@ -64,9 +68,9 @@
                     
                     <ul class="login-sign-in">
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                        {# L'utilisateur est connecté ! #}
-                        <li class="insactive" id="inscr"><a href="{{ path('msp_conference_connexion') }}">Visioconférence</a></li>
-                        <li><a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
+                        {# L'utilisateur est connectÃ© ! #}
+                        <li class="insactive" id="inscr"><a href="{{ path('msp_conference_connexion') }}">VisioconfÃ©rence</a></li>
+                        <li><a href="{{ path('fos_user_security_logout') }}">DÃ©connexion</a></li>
                         {% else %}
                         <li class="insactive avenirNextBold" id="inscr"><a href="{{ path('msp_eleve_inscription') }}">+ S'INSCRIRE</a></li>
                         <li class="avenirNextBold"><a id="member-connect" href="{{ path('fos_user_security_login') }}">CONNEXION</a></li>                        
@@ -79,9 +83,9 @@
                 <nav id="menu-niveau">                    
                     <ul class="light">                        
                         <li class=""><a href="{{ path('msp_primaire') }}">PRIMAIRE</a></li>                        
-                        <li><a href="{{ path('msp_college') }}">COLLÈGE</a></li>
-                        <li><a href="{{ path('msp_lycee') }}">LYCÉE</a></li>                        
-                        <li><a href="{{ path('msp_universite') }}">UNIVERSITÉ</a></li>
+                        <li><a href="{{ path('msp_college') }}">COLLÃGE</a></li>
+                        <li><a href="{{ path('msp_lycee') }}">LYCÃE</a></li>                        
+                        <li><a href="{{ path('msp_universite') }}">UNIVERSITÃ</a></li>
                         <li><a href="{{ path('msp_institution') }}">INSTITUTION</a></li>
                     </ul>
                 </nav>
@@ -90,9 +94,9 @@
                 <form id="connexion-menu" class="hide light" action="{{ path("fos_user_security_check") }}" method="post">
                     <fieldset class="text-center">
                         <div>
-                            <a href="{{ path("fos_user_resetting_request") }}">Mot de passe oublié ?</a>
+                            <a href="{{ path("fos_user_resetting_request") }}">Mot de passe oubliÃ© ?</a>
                             <label class="checkbox"><input type="checkbox" id="remember_me" name="_remember_me" value="on" /> Se rappeler de moi.</label>
-                            <a href="{{ path('fos_user_registration_register') }}">Pas encore membre ? S’inscrire.</a>
+                            <a href="{{ path('fos_user_registration_register') }}">Pas encore membre ? Sâinscrire.</a>
                         </div>
                         <div>
                             <input type="text" id="username" name="_username" class="input-small" placeholder="Login" required="required" />
@@ -115,7 +119,7 @@
             <footer>
                 
                 <div>
-                    <p>Copyright © 2013, MathSup. Tous droits réservés.</p>
+                    <p>Copyright Â© 2013, MathSup. Tous droits rÃ©servÃ©s.</p>
 
                     <ul>
                         <li><a href="{{ path('msp_faq') }}">FAQ /</a></li> 
@@ -124,7 +128,7 @@
                         <li><a href="{{ path('msp_cgs') }}">CGS /</a></li>
                         <li><a href="{{ path('msp_nos_engagements') }}">Nos engagements /</a></li>                        
                         <li><a href="{{ path('msp_plan_du_site') }}">Plan du site </a></li>
-                        {# L'utilisateur est-il connecté ? #}
+                        {# L'utilisateur est-il connectÃ© ? #}
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}                        
                         {# L'utilisateur est-il admin ? #}
                         {% if is_granted('ROLE_ADMIN') %}
@@ -146,6 +150,7 @@
             {% javascripts output='js/main.js' 
             '@MspFrontendBundle/Resources/public/js/jquery.min.js'
             '@MspFrontendBundle/Resources/public/js/jquery-ui.min.js'
+            '@MspFrontendBundle/Resources/public/js/bootstrap.js'
             '@MspFrontendBundle/Resources/public/js/a.javascript.js'
             %}
             <script type="text/javascript" src="http://{{ app.request.host }}{{ asset_url }}"></script>
