edit user profil

--- a/src/Msp/FrontendBundle/Resources/views/User/eleve_qcm_test.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/eleve_qcm_test.html.twig
@@ -1,4 +1,4 @@
-{% extends "MspFrontendBundle::eleve-layout.html.twig" %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
 {% block title %}QCM "{{ qcm.libelle }}" | {{ parent() }}{% endblock %}
