--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -69,8 +69,8 @@
                     <ul class="login-sign-in">
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                         {# L'utilisateur est connectÃ© ! #}
-                        <li class="insactive" id="inscr"><a href="{{ path('msp_conference_connexion') }}">VisioconfÃ©rence</a></li>
-                        <li><a href="{{ path('fos_user_security_logout') }}">DÃ©connexion</a></li>
+                        <li class="insactive" id="inscr"><a href="{{ path('msp_conference_connexion') }}">Visioconférence</a></li>
+                        <li><a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
                         {% else %}
                         <li class="insactive avenirNextBold" id="inscr"><a href="{{ path('msp_eleve_inscription') }}">+ S'INSCRIRE</a></li>
                         <li class="avenirNextBold"><a id="member-connect" href="{{ path('fos_user_security_login') }}">CONNEXION</a></li>                        
@@ -83,9 +83,9 @@
                 <nav id="menu-niveau">                    
                     <ul class="light">                        
                         <li class=""><a href="{{ path('msp_primaire') }}">PRIMAIRE</a></li>                        
-                        <li><a href="{{ path('msp_college') }}">COLLÃGE</a></li>
-                        <li><a href="{{ path('msp_lycee') }}">LYCÃE</a></li>                        
-                        <li><a href="{{ path('msp_universite') }}">UNIVERSITÃ</a></li>
+                        <li><a href="{{ path('msp_college') }}">COLLÈGE</a></li>
+                        <li><a href="{{ path('msp_lycee') }}">LYCÉE</a></li>                        
+                        <li><a href="{{ path('msp_universite') }}">UNIVERSITÉ</a></li>
                         <li><a href="{{ path('msp_institution') }}">INSTITUTION</a></li>
                     </ul>
                 </nav>
@@ -94,9 +94,9 @@
                 <form id="connexion-menu" class="hide light" action="{{ path("fos_user_security_check") }}" method="post">
                     <fieldset class="text-center">
                         <div>
-                            <a href="{{ path("fos_user_resetting_request") }}">Mot de passe oubliÃ© ?</a>
+                            <a href="{{ path("fos_user_resetting_request") }}">Mot de passe oublié ?</a>
                             <label class="checkbox"><input type="checkbox" id="remember_me" name="_remember_me" value="on" /> Se rappeler de moi.</label>
-                            <a href="{{ path('fos_user_registration_register') }}">Pas encore membre ? Sâinscrire.</a>
+                            <a href="{{ path('fos_user_registration_register') }}">Pas encore membre ? S'inscrire.</a>
                         </div>
                         <div>
                             <input type="text" id="username" name="_username" class="input-small" placeholder="Login" required="required" />
@@ -119,7 +119,7 @@
             <footer>
                 
                 <div>
-                    <p>Copyright Â© 2013, MathSup. Tous droits rÃ©servÃ©s.</p>
+                    <p>Copyright Â© 2013, MathSup. Tous droits réservés.</p>
 
                     <ul>
                         <li><a href="{{ path('msp_faq') }}">FAQ /</a></li> 
