--- a/src/Msp/FrontendBundle/Resources/views/Conference/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Conference/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "MspFrontendBundle::professeur-layout.html.twig" %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
 {% block title %}LIST CONFÉRENCES | {{ parent() }}{% endblock %}
