--- a/src/Msp/FrontendBundle/Resources/views/User/eleve.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/eleve.html.twig
@@ -1,4 +1,4 @@
-{% extends "MspFrontendBundle::eleve-layout.html.twig" %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
 {% block title %}ELEVE {{ app.user.prenom }} {{ app.user.nom }} | {{ parent() }}{% endblock %}
